--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 main {
     display: flex;
     flex-flow: row wrap;
@@ -5,6 +9,7 @@ main {
 
 h1 {
     display: inline-block;
+    
 }
 
 .weatherIcon {
@@ -17,15 +22,21 @@ header {
     flex-direction: row;
 }
 
+header > h1 {
+    color: white;
+    margin-left:50%;
+}
+
+/*|| City Select styles */
+
 #citySelect {
     display: flex;
     flex: 1;
+    min-width: 20vw;
     max-width: min-content;
-    max-height: 100vh;
     flex-flow: column wrap;
     flex-grow: 1;
     padding: 2%;
-    border: solid black 2px;
 }
 
 #citySearchForm {
@@ -33,6 +44,8 @@ header {
     max-width: fit-content;
     flex: 0;
     flex-flow: column wrap;
+    padding-bottom: 20px;
+    border-bottom: solid grey 3px;
 }
 
 #citySearchText {
@@ -40,6 +53,23 @@ header {
     flex: 1;
     flex-flow: row wrap;
     align-self: baseline;
+}
+
+#cityTextArea {
+    min-width: 250px;
+    min-height: 30px;
+    resize: none;
+    border-radius: 6px;
+}
+
+#searchButton {
+    color: white;
+    background-color: blue;
+    min-width: 250px;
+    min-height: 30px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    border-radius: 6px;
 }
 
 #cityButtonDiv {
@@ -50,32 +80,53 @@ header {
 }
 
 #cityButtonDiv button {
+    color: white;
     background-color: grey;
     min-width: 250px;
     min-height: 30px;
     margin-top: 10px;
     margin-bottom: 10px;
+    border-radius: 6px;
 }
+
+
 
 /*|| Forecast Styles*/
 
 #FCSections {
-    max-height: max-content;
+    min-width: max-content;
+    max-width: min-content;
+    
 }
 
 .cards {
-    padding: 2%;
-    border: solid black 2px;
+    margin: 2%;
+    padding: 5px;
+}
+
+.weatherIcon {
+    width: 50px;
+    height: 50px;
+    padding: 5px;
 }
 
 #todayFCBody {
-    max-width: 70vw;
+    min-width: 70vw;
+    max-width: min-content;
+    border: solid black 2px;
+    margin-top: 10px;
 }
 
 #fiveDayFC {
     display: flex;
+    
 }
 
-#fiveDayFC > div {
-    max-width: 10vw;
+#fiveDayFCcard {
+    color: white;
+    background-color: rgb(47, 47, 73);
+    max-width: 50vw;
+    padding: 10px;
 }
+
+
